--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: '3.8'
 services:
   gin-api-service:
-    # build:
-    #   context: .
-    image: localdev/gin-api-service:latest
+    build:
+      context: .
+    #image: localdev/gin-api-service:latest
     environment:
-      - APP_ENV=test
+      - APP_ENV=dev
     ports:
       - "8081:8080"
     networks:
