log trace_id, span_id, correlation_id

--- a/config/application.yaml
+++ b/config/application.yaml
@@ -14,8 +14,8 @@ datasource:
     min: 5
 
 logging:
-  format: plain # json
-  output: console # file
+  format: plain # json, plain
+  output: console # console
 
 otel:
   service:
@@ -24,6 +24,6 @@ otel:
   insecure: true
   exporter:
     endpoint: localhost:14317 #grpc
-    logging: true
-    tracer: true
-    metrics: true
+    logging: false
+    tracer: false
+    metrics: false
