--- a/config/application.yaml
+++ b/config/application.yaml
@@ -28,3 +28,13 @@ otel:
     logging: false
     tracer: false
     metrics: false
+
+security:
+  jwt:
+    private_key: private-key.pem # file, url
+    public_key: public-key.pem # file, url
+    algorithm: RS512
+    expiration: 60 # minutes
+    refresh_token_expiration: 72 # hours
+    token_blacklist_enabled: true
+    token_blacklist_ttl: 30 # minutes
