--- a/config/application.test.yaml
+++ b/config/application.test.yaml
@@ -34,6 +34,8 @@ security:
     private_key: private-key.pem # file, url
     public_key: public-key.pem # file, url
     algorithm: RS512
+    issuer: gin001
+    keyId: 900150983cd24fb0d6963f7d28e17f72
     expiration: 60 # minutes
     refresh_token_expiration: 72 # hours
     token_blacklist_enabled: true
