--- a/config/application.yaml
+++ b/config/application.yaml
@@ -1,5 +1,5 @@
 app:
-  name: gin-example-001
+  name: gin-boot-starter
   description: example of a Gin web application
   profile: default
 
@@ -20,7 +20,7 @@ logging:
 
 otel:
   service:
-    name: gin-001
+    name: gin-boot-starter
     version: 1.0.0
   insecure: true
   exporter:
@@ -34,7 +34,7 @@ security:
     private_key: private-key.pem # file, url
     public_key: public-key.pem # file, url
     algorithm: RS512
-    issuer: gin001
+    issuer: gin-boot-starter
     keyId: 900150983cd24fb0d6963f7d28e17f72
     expiration: 60 # minutes
     refresh_token_expiration: 72 # hours
