--- a/config/application-test.yaml
+++ b/config/application-test.yaml
@@ -7,7 +7,8 @@ server:
   port: 8080
 
 datasource:
-  url: postgres://postgres:pgdev01@postgres:5432/postgres?sslmode=disable&search_path=bookstore
+  #url: postgres://postgres:pgdev01@postgres:5432/postgres?sslmode=disable&search_path=bookstore
+  url: postgres://postgres:pgdev01@localhost:15432/postgres?sslmode=disable&search_path=bookstore
   driver: "pgx"
   pool:
     max: 10
