--- a/config/application-docker.yaml
+++ b/config/application-docker.yaml
@@ -1,13 +1,13 @@
 # application
 app:
-  name: Example test
-  profile: test
+  name: gin-001
+  profile: docker
 
 server:
   port: 8080
 
 datasource:
-  url: postgres://postgres:pgdev01@localhost:15432/postgres?sslmode=disable&search_path=bookstore
+  url: postgres://postgres:pgdev01@postgres:5432/postgres?sslmode=disable&search_path=bookstore
   driver: "pgx"
   pool:
     max: 10
@@ -24,17 +24,17 @@ otel:
     version: 1.0.0
   insecure: true
   exporter:
-    endpoint: localhost:14317 #grpc
-    logging: false
-    tracer: false
-    metrics: false
+    endpoint: otel-collector:4317 #grpc
+    logging: true
+    tracer: true
+    metrics: true
 
 security:
   jwt:
     private_key: private-key.pem # file, url
     public_key: public-key.pem # file, url
     algorithm: RS512
-    issuer: gin001
+    issuer: gin-001
     keyId: 900150983cd24fb0d6963f7d28e17f72
     expiration: 60 # minutes
     refresh_token_expiration: 72 # hours
