--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: '3.8'
 services:
   gin-api-service:
-    build:
-      context: .
-    #image: localdev/gin-api-service:latest
+    #build:
+    #  context: .
+    image: localdev/gin-api-service:latest
     environment:
-      - APP_ENV=dev
+      - APP_ENV=docker
     ports:
       - "8081:8080"
     networks:
